add a demo folder